fixed nav bar alignment

--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -8,39 +8,75 @@ h1 {
 
 }
 body {
+    display: flex;
     background-color: var(--body-color);
     font-family: var(--font);
+    /* min-height: 100px; */
+    flex-direction: column;
 }
 
 nav ul {
     order: 1;
     display:flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: beige;
     list-style: none;
     
-    
+}
+
+
+ul{
+    padding-inline-start: 0px;
+}
+li {
+    border-color: black;
+    border-style: dashed;
+    padding: 10px;
+    border-radius: 7px;
 }
 
 form {
     background-color: rgba(255, 188, 80, 0.781);
 }
 
+.button {
+    background-color: #ffffff;
+    border-color: #4CAF50;
+    border-radius: 7px;
+    color: #4CAF50;
+    padding: 2px 4px;
+    text-align: center;
+    display: inline-block;
+    font-size: 15px;
+    cursor:pointer;
+  }
+  
+  .button:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
 
-footer {
-    order: 4;
-}
+  input {
+    background-color: aqua;
+    border-radius: 7px;
+  }
+
+  main {
+    background-color: cadetblue;
+  }
+
 @media screen and (min-width: 550px) {
     nav ul{
         display:flex;
         flex-direction: row;
+        justify-content: space-between;
+
       }
       .container {
         flex-direction: row;
         flex-wrap: wrap;
       }
-    
     
   }
   
